# INE5413_Grafos

T1/t1/codigo/src/: ciclo_euleriano.rs  q3.rs
T2/a2_com_testes/: A2_1.py  CdElemento.py  Graph.py
T2/t2/codigo/: Cargo.toml
T2/t2/codigo/src/T1/: q5.rs
T2/t2/codigo/src/lib/: breadth_first_search.rs  graph.rs
T3/codigo/: Cargo.toml
T3/codigo/src/: t2.rs
T3/codigo/src/T1/: q2.rs  q3.rs
T3/codigo/src/T3/: q3.rs
T3/codigo/src/grafos_teste/: cor_simples.net  cor_simples2.net  custo_minimo.net
grafo_generico/: graph2.rs  main2.rs
lib/: ComponenteFortementeConexa.rs  graph.rs  ordenacao_topologica.rs
trabalhos/T1/: WeightedGraph.py
trabalhos/T1/t1/codigo/: Cargo.toml
trabalhos/T1/t1/codigo/src/: floyd_warshall.rs  q1.rs  q2.rs  q4.rs  q5.rs
trabalhos/T1/t1/codigo/src/graph_lib/: graph.rs
trabalhos/T2/a2_com_testes/: A2_2.py  A2_3.py
trabalhos/T2/t2/codigo/src/T2/: q3.rs
trabalhos/T2/t2/codigo/src/lib/: lib.rs
trabalhos/T3/codigo/src/: t1.rs  t3.rs
trabalhos/T3/codigo/src/T1/: q1.rs  q4.rs
trabalhos/T3/codigo/src/T2/: q1.rs  q2.rs
trabalhos/T3/codigo/src/T3/: q1.rs  q2.rs
trabalhos/T3/codigo/src/lib/: bellman_ford.rs  coloracao.rs  edmons_karp.rs  emparelhamento.rs  kruskal.rs  lib.rs
