[package]
name = "t1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]] # config q1
name = "q1"
path = "src/q1.rs"

[[bin]] # config q2
name = "q2"
path = "src/q2.rs"

[[bin]] # config q3
name = "q3"
path = "src/q3.rs"

[[bin]] # config q4
name = "q4"
path = "src/q4.rs"

[[bin]] # config q5
name = "q5"
path = "src/q5.rs"